WebContent/stylesheet.css
@import url('https://fonts.googleapis.com/css?family=Lato:700');

* {
    margin: 0px auto;
}
html {
    background: #0c0c0c;
}

#top_bar {
    border-bottom: 3px solid gray;
    width: 100%;
    height: 30px;
    background: #070707;
}

#links {
    text-align: left;
}

.top_bar_item {
    color: gray;
    font-family: "Sans-serif";
    font-size: 14px;
    font-weight: bold;
    text-decoration: none;
    padding-left: 10px;
    line-height: 30px;
    position: relative;
}

.top_bar_item:hover {
    color: darkGray;
}

#title {
    color: #bf2224;
    font-family: 'Lato', sans-serif;
    font-size: 24px;
    text-align: center;
    line-height: 0;
    bottom: 15px;
    position: relative;
}

#chat_box {
    float: left;
    color: gray;
    position: absolute;
    width: 40%;
    height: 91%;
    padding-left: 1%;
    padding-top: 1%;
    font-size: 20px;
    overflow: scroll;
    overflow-x: none;
    overflow-x: hidden;
}

#info {
    width: 56%;
    height: 93%;
    float: right;
    margin-top: 2%;
    margin-right: 2%;
    margin-left: 42%;
    color: gray;
    text-align: center;
    position: absolute;
}

#map {
    width: 100%;
    height: 50%;
    border: 3px solid gray;
    color: gray;
    text-align: center;
    font-size: 40px;
}

#inventory {
    width: 100%;
    height: 10%;
    border: 3px solid gray;
    color: gray;
    text-align: center;
    font-size: 40px;
    margin-top: 30px;
    float: down;
}

#user_input {
    width: 100%;
    height: 30px;
    bottom: 0px;
    position: absolute;
    margin: 0 auto;
    padding: 0 auto;
    background: #070707;
    border-top: 3px solid gray;
    border-left: none;
    border-right: none;
    border-bottom: none;
    color: gray;
    font-size: 20px;
}

input:focus {
    outline: none;
}

.network_item {
    margin-top: 20px;
    display: block;
    background: #0c0c0c;
    width: 350px;
    color: gray;
}

h2 {
    font-size: 50px;
    padding-bottom: 20px;
    border-bottom: 3px solid gray;
    margin-bottom: 20px;
}

.network_input {
    background: #070707;
    border: 3px solid gray;
    margin-top: 10px;
    width: 200px;
    height: 24px;
    color: gray;
    font-size: 20px;
}

p {
    font-size: 22px;
    padding-top: 10px;
}

button {
    width: 206px;
    height: 35px;
    font-weight: bold;
    font-size: 16px;
    color: gray;
    background: #0c0c0c;
    margin-top: 30px;
    border: 3px solid gray;
}

.link_buttons {
    color: #e54043;
    cursor: pointer;
}

#join-code-box {
    width: 100%;
    height: 30px;
    font-weight: bold;
    font-size: 16px;
    color: gray;
    background: #070707;
    margin-top: 30px;
    border: 3px solid gray;
    text-align: center;
}

